correccion estetica de titulo de productos

--- a/css/custom.css
+++ b/css/custom.css
@@ -408,6 +408,11 @@ footer h4 {
     
 }
 
+.producto-detalles{
+    color: #000000;
+    text-decoration: none;
+}
+
 /*------------------------------------------------------------*/
 /* TRABAJO */
 
